updated project structure and added inventory level