@@ -6,14 +6,17 @@ import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.springframework.data.util.Streamable;
 
+import java.util.List;
+import java.util.stream.Collectors;
+
 @Mapper(componentModel = "spring")
 public abstract class GeneralProductVariantMapper {
 
     @Mapping(source = "optionValues", target = "options")
     public abstract GeneralProductVariantResponse toResponse(ProductVariant productVariant);
 
-    public GeneralProductVariantBatchResponse toBatchResponse(Iterable<ProductVariant> productVariants) {
-        return new GeneralProductVariantBatchResponse(Streamable.of(productVariants).map(this::toResponse).toList());
+    public GeneralProductVariantBatchResponse toBatchResponse(List<ProductVariant> productVariants) {
+        return new GeneralProductVariantBatchResponse(productVariants.stream().map(this::toResponse).collect(Collectors.toList()));
     }
 
     @Mapping(source = "option.id", target = "optionId")
